# warden

./: .gitignore  .goreleaser.yml  Cargo.toml  Dockerfile  LICENSE.md  build.rs
.github/workflows/: lint.yml  release.yml
common/: Cargo.toml
common/src/config/: file.rs  mod.rs
console/: Cargo.toml
console/src/: lib.rs  main.rs
console/src/cli/commands/: config.rs  enroll.rs  status.rs  toggle.rs
daemon/: Cargo.toml
daemon/src/: amqp.rs  lib.rs  mqtt.rs
daemon/src/cli/: mod.rs  run.rs  start.rs  status.rs  stop.rs
daemon/src/handlers/: command.rs  config.rs  event.rs
db_faker/: Cargo.toml  README.md
db_faker/src/: main.rs
overwatch/: Cargo.toml  README.md
overwatch/src/: control.rs  error.rs  lib.rs  tests.rs
overwatch/src/models/: service.rs
overwatch/src/monitors/: dns.rs  http.rs  mod.rs  ping.rs  ssl.rs
postgres/: Cargo.toml  README.md
postgres/src/: common.rs  lib.rs  manager.rs  tunnel_keeper.rs  user.rs
postgres/src/backup/: full.rs  incremental.rs  snapshot.rs
postgres/src/cli/: mod.rs
postgres/src/cli/commands/: mod.rs  restore_full_incremental.rs
postgres/src/restore/: full.rs  incremental.rs  mod.rs  point_in_time.rs  snapshot.rs
postgres/src/wrapper/: mod.rs  pg_basebackup.rs  pg_dump.rs  pg_restore.rs
postgres/tests/: backup_restore_test.rs  cli_smoke.rs  cli_snapshot.rs  cli_snapshot_real.rs  postgres-init-replication.sh
postgresql/: Cargo.toml  README.md
postgresql/examples/: backup_restore.rs
postgresql/src/: common.rs  lib.rs  manager.rs  user.rs
postgresql/src/backup/: full.rs  incremental.rs  mod.rs  snapshot.rs
postgresql/src/cli/: mod.rs
postgresql/src/cli/commands/: mod.rs
postgresql/src/restore/: full.rs  incremental.rs  mod.rs  point_in_time.rs  snapshot.rs
postgresql/src/wrapper/: pg_basebackup.rs  pg_dump.rs  pg_restore.rs
postgresql/tests/: backup_restore_test.rs
src/: main.rs
src/config/: keys.rs  mod.rs
ssh/: Cargo.toml  README.md
ssh/src/: lib.rs  ssh.rs
ssh/src/cli/: forward.rs
storage/: Cargo.toml  README.md
storage/docs/: postgres_integration_guide.md
storage/src/: cli.rs  error.rs  integration.rs  lib.rs  types.rs
storage/src/providers/: aws.rs  mod.rs
storage/testdata/: test_file.txt
storage/tests/: aws_multipart.rs  postgres_integration_test.rs  providers_matrix.rs  providers_matrix_large.rs
tests/: cli_smoke.rs  docker-compose.yml
vaultwarden/: Cargo.toml
