[package]
name = "warden"
description = "The worker daemon for Corvus"
version = "0.1.26"
edition = "2021"


[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[workspace]
members = ["common", "console", "daemon", "overwatch", "postgres", "ssh", "storage"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
console = { path = "./console" }
daemon = { path = "./daemon" }
postgres = { path = "./postgres" }
ssh = { path = "./ssh" }
common = { path = "./common" }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
storage = { path = "./storage" }
overwatch = { path = "./overwatch" }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
