[package]
name = "warden"
description = "The worker daemon for Corvus"
version = "0.2.0"
edition = "2021"


[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[workspace]
members = ["common", "console", "daemon", "overwatch", "postgres", "ssh", "storage", "db_faker"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.27"
sentry = "0.41.0"
sentry-log = "0.41.0"
console = { path = "./console" }
daemon = { path = "./daemon" }
postgres = { path = "./postgres" }
ssh = { path = "./ssh" }
common = { path = "./common" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
storage = { path = "./storage" }
overwatch = { path = "./overwatch" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
