[package]
name = "console"
description = "Manage the interaction with the Hold (https://hold.corvushold.com)"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.85"
serde_yaml = "0.9.34"
toml = "0.8.12"
common = { path = "../common" }
