[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "daemon"
path = "src/lib.rs"

[dependencies]
log = "0.4.26"
env_logger = "0.11.7"
anyhow = "1.0.85"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2.3.1"
toml = "0.8.12"
config = "0.15.11"
shellexpand = "3.1.0"
common = { path = "../common" }
overwatch = { path = "../overwatch" }
postgresql = { path = "../postgresql" }
uuid = "1.16.0"
futures = "0.3.31"
clap = { version = "4.5.32", features = ["derive"] }

[dependencies.nix]
version = "0.29.0"
features = ["process", "fs", "signal"]

[dependencies.signal-hook]
version = "0.3.17"
