[package]
name = "overwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.57"
trust-dns-resolver = "0.23.2"
ping = "0.5.1"
rustls = "0.22.2"
rustls-pemfile = "2.1.1"
webpki-roots = "0.26.0"
async-trait = "0.1.77"
chrono = { version = "0.4.35", features = ["serde"] }
anyhow = "1.0.80"
log = "0.4.20"

[dev-dependencies]
tokio-test = "0.4.3"
mockito = "1.2.0"
