[package]
name = "postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4", "with-uuid-1"] }
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "2.0.11"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.11.6"
anyhow = "1.0.70"
walkdir = "2.3.3"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
async-trait = "0.1.68"
futures = "0.3.28"
tempfile = "3.5.0"
tar = "0.4.38"
flate2 = "1.0.26"
regex = "1.8.1"
clap = { version = "4.0", features = ["derive"] }
storage = { path = "../storage" }
serial_test = "2.0.0"

ssh = { path = "../ssh" }
[[bin]]
name = "pg_warden"
path = "src/bin/pg_warden.rs"

[lib]
name = "postgresql"
path = "src/lib.rs"