[package]
name = "ssh"
version = "0.1.0"
edition = "2021"
description = "SSH client for Corvus"

[dependencies]
russh = { version = "0.51.1" }
russh-keys = "0.49.2"
log = "0.4"
thiserror = "2.0.12"
env_logger = "0.11.6"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.97"
ctrlc = "3.4.1"
socket2 = "0.5.8"
async-trait = "0.1.0"

[dev-dependencies]
mockall = "0.13.1"