[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "Standardized storage library for S3-compatible providers"

[dependencies]
async-trait = "0.1.88"
anyhow = "1.0.98"
aws-config = "1.6.3"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.88.0"
aws-smithy-runtime = { version = "1.8.3", features = ["client"] }
aws-smithy-types = "1.3.1"
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["io"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11"

rand = "0.9.1"
tempfile = "3.20.0"
